[gd_scene load_steps=4 format=3]

[ext_resource type="Script" uid="uid://betsu8sbbb877" path="res://scenes/messages/thread_panel.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://iqi2q8llaggv" path="res://assets/theme/icons/send.svg" id="2"]

[sub_resource type="StyleBoxFlat" id="panel_bg"]
bg_color = Color(0.176, 0.188, 0.208, 1)
border_width_left = 1
border_color = Color(0.14, 0.15, 0.16, 1)

[node name="ThreadPanel" type="PanelContainer"]
visible = false
custom_minimum_size = Vector2(340, 0)
size_flags_vertical = 3
theme_override_styles/panel = SubResource("panel_bg")
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
theme_override_constants/separation = 8

[node name="ThreadTitle" type="Label" parent="VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Thread"

[node name="CloseButton" type="Button" parent="VBox/Header"]
layout_mode = 2
custom_minimum_size = Vector2(32, 32)
flat = true
text = "X"

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ParentMessageContainer" type="MarginContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ReplyCountLabel" type="Label" parent="VBox"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.345, 0.396, 0.949, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ThreadMessageList" type="VBoxContainer" parent="VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ComposerBox" type="VBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HBox" type="HBoxContainer" parent="VBox/ComposerBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ThreadInput" type="TextEdit" parent="VBox/ComposerBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 36)
placeholder_text = "Reply in thread..."
scroll_fit_content_height = true

[node name="SendButton" type="Button" parent="VBox/ComposerBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(32, 32)
tooltip_text = "Send"
flat = true
icon = ExtResource("2")

[node name="AlsoSendCheck" type="CheckBox" parent="VBox/ComposerBox"]
layout_mode = 2
text = "Also send to channel"
theme_override_font_sizes/font_size = 11
